bug: body footer overlap corrected

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ body {
         width: 8rem;
         height: 4rem;
         right: 7rem;
-        bottom: 14rem;
+        bottom: 12rem;
     }
     .body-footer img {
         margin: 0 0.2rem;
